--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -73,14 +73,17 @@ VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dconverter
 
-bin_PROGRAMS = ascdemount ascmount
+bin_PROGRAMS = ascdemount ascmount asc_gfx2pcx asc_makegfx
 
 ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp
-
-ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp ascstring.cpp
+ascmount_SOURCES = mount.cpp   basestrm.cpp misc.cpp ascstring.cpp
+asc_gfx2pcx_SOURCES = bi2pcx.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
+asc_makegfx_SOURCES = mntgraph.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
 
 ascmount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 ascdemount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
+asc_gfx2pcx_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
+asc_makegfx_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
 CONFIG_CLEAN_FILES = 
@@ -97,6 +100,18 @@ ascdemount_LDFLAGS =
 ascmount_OBJECTS =  mount.o basestrm.o misc.o ascstring.o
 ascmount_DEPENDENCIES = 
 ascmount_LDFLAGS = 
+asc_gfx2pcx_OBJECTS =  bi2pcx.o basestrm.o misc.o ascstring.o loadpcxc.o \
+palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
+CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
+typen.o vehicletype.o password.o
+asc_gfx2pcx_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_gfx2pcx_LDFLAGS = 
+asc_makegfx_OBJECTS =  mntgraph.o basestrm.o misc.o ascstring.o \
+loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
+gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
+buildingtype.o typen.o vehicletype.o password.o
+asc_makegfx_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_makegfx_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
@@ -107,10 +122,15 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
-DEP_FILES =  .deps/ascstring.P .deps/basestrm.P .deps/demount.P \
-.deps/misc.P .deps/mount.P
-SOURCES = $(ascdemount_SOURCES) $(ascmount_SOURCES)
-OBJECTS = $(ascdemount_OBJECTS) $(ascmount_OBJECTS)
+DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
+.deps/PropertyGroup.P .deps/ascstring.P .deps/basegfx.P \
+.deps/basestrm.P .deps/bi2pcx.P .deps/buildingtype.P .deps/demount.P \
+.deps/gameoptions.P .deps/graphicset.P .deps/loadpcxc.P .deps/misc.P \
+.deps/mntgraph.P .deps/mount.P .deps/newfont.P .deps/palette.P \
+.deps/password.P .deps/sgstream.P .deps/stack.P .deps/typen.P \
+.deps/vehicletype.P
+SOURCES = $(ascdemount_SOURCES) $(ascmount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES)
+OBJECTS = $(ascdemount_OBJECTS) $(ascmount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -171,6 +191,14 @@ ascdemount: $(ascdemount_OBJECTS) $(ascdemount_DEPENDENCIES)
 ascmount: $(ascmount_OBJECTS) $(ascmount_DEPENDENCIES)
 	@rm -f ascmount
 	$(CXXLINK) $(ascmount_LDFLAGS) $(ascmount_OBJECTS) $(ascmount_LDADD) $(LIBS)
+
+asc_gfx2pcx: $(asc_gfx2pcx_OBJECTS) $(asc_gfx2pcx_DEPENDENCIES)
+	@rm -f asc_gfx2pcx
+	$(CXXLINK) $(asc_gfx2pcx_LDFLAGS) $(asc_gfx2pcx_OBJECTS) $(asc_gfx2pcx_LDADD) $(LIBS)
+
+asc_makegfx: $(asc_makegfx_OBJECTS) $(asc_makegfx_DEPENDENCIES)
+	@rm -f asc_makegfx
+	$(CXXLINK) $(asc_makegfx_LDFLAGS) $(asc_makegfx_OBJECTS) $(asc_makegfx_LDADD) $(LIBS)
 .cpp.o:
 	$(CXXCOMPILE) -c $<
 
