--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -73,17 +73,19 @@ VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dconverter
 
-bin_PROGRAMS = ascdemount ascmount asc_gfx2pcx asc_makegfx
+bin_PROGRAMS = ascdemount ascmount asc_gfx2pcx asc_makegfx asc_mntgraph
 
 ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp
 ascmount_SOURCES = mount.cpp   basestrm.cpp misc.cpp ascstring.cpp
-asc_gfx2pcx_SOURCES = bi2pcx.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
-asc_makegfx_SOURCES = mntgraph.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
+asc_gfx2pcx_SOURCES = bi2pcx.cpp    basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
+asc_makegfx_SOURCES = makegfx.cpp   basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
+asc_mntgraph_SOURCES = mntgraph.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp
 
 ascmount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 ascdemount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 asc_gfx2pcx_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
 asc_makegfx_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
+asc_mntgraph_LDADD = ../../sdl/libsdl.a -lSDL -lpthread @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
 CONFIG_CLEAN_FILES = 
@@ -106,12 +108,18 @@ CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
 typen.o vehicletype.o password.o
 asc_gfx2pcx_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_gfx2pcx_LDFLAGS = 
-asc_makegfx_OBJECTS =  mntgraph.o basestrm.o misc.o ascstring.o \
+asc_makegfx_OBJECTS =  makegfx.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o
 asc_makegfx_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_makegfx_LDFLAGS = 
+asc_mntgraph_OBJECTS =  mntgraph.o basestrm.o misc.o ascstring.o \
+loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
+gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
+buildingtype.o typen.o vehicletype.o password.o
+asc_mntgraph_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_mntgraph_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
@@ -125,12 +133,12 @@ GZIP_ENV = --best
 DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/PropertyGroup.P .deps/ascstring.P .deps/basegfx.P \
 .deps/basestrm.P .deps/bi2pcx.P .deps/buildingtype.P .deps/demount.P \
-.deps/gameoptions.P .deps/graphicset.P .deps/loadpcxc.P .deps/misc.P \
-.deps/mntgraph.P .deps/mount.P .deps/newfont.P .deps/palette.P \
-.deps/password.P .deps/sgstream.P .deps/stack.P .deps/typen.P \
-.deps/vehicletype.P
-SOURCES = $(ascdemount_SOURCES) $(ascmount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES)
-OBJECTS = $(ascdemount_OBJECTS) $(ascmount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS)
+.deps/gameoptions.P .deps/graphicset.P .deps/loadpcxc.P .deps/makegfx.P \
+.deps/misc.P .deps/mntgraph.P .deps/mount.P .deps/newfont.P \
+.deps/palette.P .deps/password.P .deps/sgstream.P .deps/stack.P \
+.deps/typen.P .deps/vehicletype.P
+SOURCES = $(ascdemount_SOURCES) $(ascmount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES)
+OBJECTS = $(ascdemount_OBJECTS) $(ascmount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -199,6 +207,10 @@ asc_gfx2pcx: $(asc_gfx2pcx_OBJECTS) $(asc_gfx2pcx_DEPENDENCIES)
 asc_makegfx: $(asc_makegfx_OBJECTS) $(asc_makegfx_DEPENDENCIES)
 	@rm -f asc_makegfx
 	$(CXXLINK) $(asc_makegfx_LDFLAGS) $(asc_makegfx_OBJECTS) $(asc_makegfx_LDADD) $(LIBS)
+
+asc_mntgraph: $(asc_mntgraph_OBJECTS) $(asc_mntgraph_DEPENDENCIES)
+	@rm -f asc_mntgraph
+	$(CXXLINK) $(asc_mntgraph_LDFLAGS) $(asc_mntgraph_OBJECTS) $(asc_mntgraph_LDADD) $(LIBS)
 .cpp.o:
 	$(CXXCOMPILE) -c $<
 
