--- a/source/unix/Makefile.am
+++ b/source/unix/Makefile.am
@@ -10,7 +10,8 @@ PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp \
 buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp \
 gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp \
 mapdisplay.cpp resourcenet.cpp dashboard.cpp ascstring.cpp graphicset.cpp \
-vehicle.cpp buildings.cpp networkdata.cpp 
+vehicle.cpp buildings.cpp networkdata.cpp textfileparser.cpp terraintype.cpp \
+objecttype.cpp textfiletags.cpp
 
 asc_LDADD   = ../ai/libai.a ../sdl/libsdl.a ../libs/triangul/libtriangul.a \
 -lSDL -lpthread -lSDL_image -lSDL_mixer @LDADDLIBBZ2@
